--- a/pom.xml
+++ b/pom.xml
@@ -483,7 +483,42 @@
             <artifactId>dubbo</artifactId>
             <version>2.6.0</version>
         </dependency>
+        <!--<dependency>-->
+        <!--<groupId>com.sun.tools.btrace</groupId>-->
+        <!--<artifactId>btrace-agent</artifactId>-->
+        <!--<version>1.2.3</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+        <!--<groupId>com.sun.tools.btrace</groupId>-->
+        <!--<artifactId>btrace-boot</artifactId>-->
+        <!--<version>1.2.3</version>-->
+        <!--</dependency>-->
 
+        <dependency>
+            <groupId>com.sun.tools.btrace</groupId>
+            <artifactId>btrace-agent</artifactId>
+            <version>1.3.11.3</version>
+            <scope>system</scope>
+            <systemPath>D:/APPS/RepMaven/com/sun/jar-btrace/btrace-agent.jar</systemPath>
+        </dependency>
+
+        <dependency>
+            <groupId>com.sun.tools.btrace</groupId>
+            <artifactId>btrace-boot</artifactId>
+            <version>1.3.11.3</version>
+            <scope>system</scope>
+            <systemPath>D:/APPS/RepMaven/com/sun/jar-btrace/btrace-boot.jar</systemPath>
+
+        </dependency>
+
+        <dependency>
+            <groupId>com.sun.tools.btrace</groupId>
+            <artifactId>btrace-client</artifactId>
+            <version>1.3.11.3</version>
+            <scope>system</scope>
+            <systemPath>D:/APPS/RepMaven/com/sun/jar-btrace/btrace-client.jar</systemPath>
+
+        </dependency>
     </dependencies>
 
     <build>
