--- a/pom.xml
+++ b/pom.xml
@@ -540,6 +540,15 @@
             <systemPath>${btrace-path}/btrace-client.jar</systemPath>
         </dependency>
 
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.20</version>
+            <scope>provided</scope>
+        </dependency>
+
+
     </dependencies>
 
     <build>
