--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <!-- spring version-->
-        <spring.version>4.3.8.RELEASE</spring.version>
+        <spring.version>5.1.11.RELEASE</spring.version>
         <aspectj-version>1.8.6</aspectj-version>
         <mybatis.version>3.4.1</mybatis.version>
         <mybatis-spring.version>1.3.1</mybatis-spring.version>
@@ -31,10 +31,9 @@
         <freemarker.version>2.3.23</freemarker.version>
         <junit.version>4.12</junit.version>
         <commons-collections4.version>4.1</commons-collections4.version>
-        <jackson.version>2.5.4</jackson.version>
+        <jackson.version>2.10.0</jackson.version>
         <resteasy.version>3.0.19.Final</resteasy.version>
-        <!--<btrace-path>D:/Tool/btrace-bin-1.3.11/build</btrace-path>-->
-        <btrace-path>D:/APPS/RepMaven/com/sun/jar-btrace</btrace-path>
+        <btrace-path>D:/Tool/btrace-bin-1.3.11/build</btrace-path>
         <btrace-version>1.3.11.3</btrace-version>
     </properties>
     <dependencies>
