--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -17,6 +17,10 @@
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
 
+    <listener>
+        <listener-class>com.ca.fire.listener.MyServletContextListener</listener-class>
+    </listener>
+
     <filter>
         <filter-name>encodingFilter</filter-name>
         <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
@@ -52,25 +56,25 @@
 
 
     <!--<listener>-->
-        <!--<listener-class>org.jboss.resteasy.plugins.server.servlet.ResteasyBootstrap</listener-class>-->
+    <!--<listener-class>org.jboss.resteasy.plugins.server.servlet.ResteasyBootstrap</listener-class>-->
     <!--</listener>-->
 
     <!--&lt;!&ndash;<listener>&ndash;&gt;-->
-        <!--&lt;!&ndash;<listener-class>org.jboss.resteasy.plugins.spring.SpringContextLoaderListener</listener-class>&ndash;&gt;-->
+    <!--&lt;!&ndash;<listener-class>org.jboss.resteasy.plugins.spring.SpringContextLoaderListener</listener-class>&ndash;&gt;-->
     <!--&lt;!&ndash;</listener>&ndash;&gt;-->
 
     <!--<context-param>-->
-        <!--<param-name>resteasy.servlet.mapping.prefix</param-name>-->
-        <!--<param-value></param-value>-->
+    <!--<param-name>resteasy.servlet.mapping.prefix</param-name>-->
+    <!--<param-value></param-value>-->
     <!--</context-param>-->
 
     <!--<servlet>-->
-        <!--<servlet-name>link</servlet-name>-->
-        <!--<servlet-class>org.jboss.resteasy.plugins.server.servlet.HttpServletDispatcher</servlet-class>-->
+    <!--<servlet-name>link</servlet-name>-->
+    <!--<servlet-class>org.jboss.resteasy.plugins.server.servlet.HttpServletDispatcher</servlet-class>-->
     <!--</servlet>-->
     <!--<servlet-mapping>-->
-        <!--<servlet-name>link</servlet-name>-->
-        <!--<url-pattern>/*</url-pattern>-->
+    <!--<servlet-name>link</servlet-name>-->
+    <!--<url-pattern>/*</url-pattern>-->
     <!--</servlet-mapping>-->
 
 
